# pointcloud-raster

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh  verify-setup.sh
.github/workflows/: benchmarks.yml  build-test.yml  lint.yml  release.yml
benchmark_results/: mode_comparison.csv
benchmark_results/full_dataset/: mode_comparison_50files.csv
benchmarks/: README.md  SAMPLE_EXPECTED_RESULTS.md  SAMPLE_performance_results.csv  VISUALIZATION_PREVIEW.md  bench_compare_cpu_gpu.cu  run_all_benchmarks.sh  visualize_performance.py
cmake/: FindGDAL.cmake  FindPROJ.cmake
conda/: meta.yaml
containers/: Dockerfile.cuda  docker-compose.yml
docs/: BENCHMARKING.md  BENCHMARKING_QUICKSTART.md  BENCHMARK_FILES_SUMMARY.md  BENCHMARK_QUICK_REFERENCE.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  CLAUDE.md  DC_LIDAR_BENCHMARK_COMPREHENSIVE.md  DC_LIDAR_BENCHMARK_README.md  DOCKER_QUICKSTART.md  ERROR_HANDLING.md  GPU_AND_THREADING.md  IMPLEMENTATION_SUMMARY.md  PYTHON_API.md  README.md  ROLLOUT.md  VALIDATION_REPORT.md
examples/python/: basic_rasterize.py  smiley_face.py  smiley_face_large_test.py  smiley_face_massive.py
include/pcr/core/: grid.h  grid_config.h  point_cloud.h  types.h
include/pcr/engine/: accumulator.h  accumulator_kernels.h  filter.h  filter_kernels.h  glyph.h  glyph_kernels.h  grid_merge.h  memory_pool.h  pipeline.h  tile_manager.h  tile_router.h  tile_router_kernels.h
include/pcr/io/: grid_io.h  point_cloud_io.h  tile_state_io.h
include/pcr/ops/: builtin_ops.h  reduction_op.h  reduction_registry.h
python/: CMakeLists.txt  bindings.cpp  setup.py
python/pcr/: __init__.py  test_generators.py
scripts/: benchmark_billion_points.py  benchmark_hybrid.py  benchmark_multithread.py  benchmark_output.txt  benchmark_results.csv  docker_run.sh  generate_all_patterns.py  generate_gpu_patterns.py  generate_multithread_patterns.py  hybrid_benchmark_results.csv  multithread_benchmark_results.csv  performance_comparison.csv  quick_validation.sh  run_performance_validation.sh  test_boundary_points.py  test_gpu_benchmark_simple.py  test_gpu_crash_debug.py  test_grid_sizes.py
scripts/benchmarks/: bench_glyphs.py  benchmark_cpu_gpu.py  benchmark_glyph.py  benchmark_glyph_full.py  benchmark_glyph_results.csv  generate_report.py  render_dc_tifs.py  visualize_benchmark_results.py
scripts/data/: test_dc_lidar.py
scripts/diagnostics/: diagnose_gpu.py  test_device_transfer_100m.py  test_device_transfer_10m.py
scripts/patterns/: compare_cpu_gpu_patterns.py  create_point_vs_gaussian_comparison.py  generate_glyph_patterns.py  generate_hybrid_patterns.py
scripts/shell/: publish_report.sh  run_benchmarks.sh  run_gpu_visual_tests.sh
src/core/: grid.cpp  grid_config.cpp  point_cloud.cpp  types.cpp
src/engine/: accumulator.cpp  accumulator_kernels.cu  filter.cpp  filter_kernels.cu  glyph_kernels.cu  grid_merge.cu  memory_pool.cu  pipeline.cpp  reprojection.cpp  tile_manager.cpp  tile_router.cpp  tile_router_kernels.cu
src/io/: grid_io.cpp  point_cloud_io.cpp  tile_state_io.cpp
src/ops/: reduction_registry.cpp
tests/cpp/: test_accumulator.cpp  test_error_handling.cpp  test_filter.cpp  test_gpu.cpp  test_gpu_pipeline.cpp  test_grid.cpp  test_grid_config.cpp  test_grid_io.cpp  test_helpers.h  test_memory_pool.cu  test_pipeline.cpp  test_point_cloud.cpp  test_point_cloud_io.cpp  test_reduction_ops.cpp  test_threading.cpp  test_tile_manager.cpp  test_tile_router.cpp  test_tile_router.cu  test_tile_state_io.cpp  test_types.cpp
